# northkeep

./: .gitignore  AGENTS.md  CLAUDE.md  KNOWN-LIMITS.md  LICENSE  LICENSE-APPSTORE-EXCEPTION  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml
.impeccable/critique/: 2026-07-21T02-29-39Z__apps-mobile.md  2026-07-21T19-34-02Z__apps-web.md
SPEC/: memory-schema.md  security-model.md
SPEC/decisions/: 0001-vault-encryption-and-key-derivation.md  0002-background-unlock-and-mcp-surface.md  0003-import-extraction-pipeline.md  0004-local-gui.md  0005-redaction-pipeline.md  0006-scopes-and-audit.md  0007-mediated-client.md  0008-provider-abstraction.md  0009-vault-sync.md  0010-billing.md  0011-model-concierge.md  0012-desktop-distribution.md  0013-consumer-mcp.md  0014-effortless-models.md  0015-edit-memory-scope.md  (+16 more)
apps/desktop/src-tauri/: Cargo.toml  entitlements-jitless.plist  entitlements.plist  tauri.bundle.conf.json  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: appstore-age-rating.md  appstore-privacy-label.md  appstore-review-notes.md  appstore-submission-checklist.md
e2e/: c2.test.ts  m0.test.ts  m1.test.ts  m2.test.ts  m3.test.ts  m4.test.ts  m5.test.ts  m5b.test.ts  m6.test.ts  m7a.test.ts  m7b.test.ts  m8.test.ts  onboarding.test.ts  ui.test.ts  vitest.config.ts
legal/: PRIVACY.md  TERMS.md
scripts/: verify-golive.sh
site/: index.html  privacy.html  roadmap.html  start.html  terms.html
(+161 files in other folders)
