[package]
name = "northkeep-desktop"
version = "0.4.0"
description = "NorthKeep — your AI memory, in a vault you own"
license = "AGPL-3.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# SIGTERM-then-SIGKILL shutdown (ADR 0012); already in tauri's dep tree.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
